add login with google

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -28,6 +28,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <a href="http:localhost:3001/auth/google"> Log in </a>
     <div id="root"></div>
     <!--
       This HTML file is a template.
